# eof

./: .gitignore  README.md
.github/workflows/: tests.yml
analysis/: call_depth_analysis.py  code_analysis.csv  code_analysis.py  get_top_bytecodes.py  jumpdest_analysis.py  malicious_bytes_analysis.py  malicious_bytes_snapscan.py  top_bytecodes_17M_analysis.csv  top_bytecodes_analysis.csv
code_prefixes/: snap2code-prefixes.py  warp2code-prefixes.py
eips_code/: code_validation_tests.py  eip-3540.py  eip-3670.py  eip-4200.py  eip3540.py  eip3540_test.py  eip3670.py  eip3670_test.py  eip4200.py  eip4200_test.py  eip4750.py  eip4750_test.py  eip5450.py  eip5450_table.py  eip5450_test.py  eipXXXX.py  eipXXXX_test.py  eof1_validation.py  eof1_validation_test.py  eofv0.py  fuzz-eof.py  fuzz-validation.py  vlq.py
eof-rs/: Cargo.toml
eof-rs/src/: de.rs  display.rs  error.rs  lib.rs  ser.rs  types.rs  validation.rs
eof_dasm/: __main__.py  eof_dasm.py
examples/: two_functions_with_dispatch.md
spec/: eof.md  eof_future_upgrades.md  eofv0_verkle.md  implementation_matrix.md
