[package]
name = "eof-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-bytes-repr = "0.1.5"
hex = { version = "0.4.3", default-features = false, features = ["std"] }
clap = { version = "4.0.8", features = ["cargo"] }

[[bin]]
name = "eof-tool"
path = "bin/main.rs"
